2003-03-27  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.am, host/Makefile.in:
	$(bindir) may not exist yet, so create it if necessary.

2003-02-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/usbs.sgml: Declare as <part> not <reference> to get
	correct TOC numbering.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/usbs.cdl: Update doc links.

	* doc/usbs.sgml: Comment out DOCTYPE for now to allow building
	with standard doc build.

2003-02-12  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.in, host/configure:
	Regenerate after toplevel acinclude.m4 update

2002-09-23  Bart Veer  <bartv@ecoscentric.com>

	* host/configure.in:
	Only build if the required Linux kernel support is present.

2002-09-21  Bart Veer  <bartv@ecoscentric.com>

	* host/usbhost.c:
	Avoid const compatibility problems with Tcl 8.4

2002-01-23  Bart Veer  <bartv@redhat.com>

	* host/Makefile.am, host/Makefile.in, host/acinclude.m4,
	  host/aclocal.m4, host/configure, host/configure.in,
	  host/usbhost.c, host/usbhost.tcl, host/verbose.tcl
        Host-side support for USB testing
	
	* tests/usbtarget.c, tests/common.c, tests/protocol.h:
	New files containing the target-side testing support and
	support files.

	* cdl/usbs.cdl:
	Add a configuration option to build the target-side testing
	support.

	* doc/usbs.sgml, doc/*.html:
	Document the testing support. Regenerate html.

2001-09-14  Bart Veer  <bartv@redhat.com>

	* doc/usbs.sgml, doc/*.html:
	Fix the example strings in the enumeration data.
	Regenerate html.

	* include/usbs.h:
	Update the USB testing data structure	

	* src/usbs.c (usbs_handle_standard_control):
	Fix an assertion for the special case of a USB configuration that
	defines no endpoints.

2001-08-06  Bart Veer  <bartv@redhat.com>

	* include/usbs.h:
	Define additional data structures required for USB testing.

2001-06-19  Bart Veer  <bartv@redhat.com>

	* src/usbs.c, include/usbs.h (usbs_devtab_cread):