@@ -1,0 +1,51 @@
+#ifndef CYGONCE_USBHOST_CONFIG_H
+# define CYGONCE_USBHOST_CONFIG_H
+
+//======================================================================
+//
+//	acconfig.h
+//
+//	Configuration header for usbhost
+//
+//======================================================================
+//####COPYRIGHTBEGIN####
+//                                                                          
+// ----------------------------------------------------------------------------
+// Copyright (C) 2005 eCosCentric Ltd
+//
+// This file is part of the eCos host tools.
+//
+// This program is free software; you can redistribute it and/or modify it 
+// under the terms of the GNU General Public License as published by the Free 
+// Software Foundation; either version 2 of the License, or (at your option) 
+// any later version.
+// 
+// This program is distributed in the hope that it will be useful, but WITHOUT 
+// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
+// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for 
+// more details.
+// 
+// You should have received a copy of the GNU General Public License along with
+// this program; if not, write to the Free Software Foundation, Inc., 
+// 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+//
+// ----------------------------------------------------------------------------
+//                                                                          
+//####COPYRIGHTEND####
+//======================================================================
+//#####DESCRIPTIONBEGIN####
+//
+// Author(s):	bartv
+// Contact(s):	bartv
+// Date:	2005/06/26
+// Version:	0.01
+//
+//####DESCRIPTIONEND####
+//======================================================================
+
+#undef PACKAGE
+#undef VERSION
+#undef CYGBLD_USE_NEW_FIELD_NAMES
+
+#endif  // CYGONCE_USBHOST_CONFIG_H
+// End of config.h
